# envl

./: .editorconfig  .gitignore  Cargo.toml  INSTALL  LICENSE  README.md  package.json
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  release-assets.yml  release.yml
.github/workflows/setup/: action.yml
docker/: DOCKERFILE
scripts/: .envl  .envlconf  build-release.sh  ci.sh  cli-version.ts  envl-version.ts  eslint.config.js  fmt.sh  git-symlinks.sh  lint.sh  prettier.config.js  test.sh
scripts/template/: eslint.config.js  prettier.config.js
tests/envl-js-test/: .envl  .envlconf  build.sh  package.json  test.sh  tsconfig.json
tests/envl-js-test/src/: envl.test.ts
tests/envl-rs-test/: .envl  .envlconf  Cargo.toml  rustfmt.toml
tests/envl-rs-test/src/: main.rs
tests/envl-ts-test/: build.sh  package.json
tests/envl-ts-test/src/: envl.ts
