[workspace]
resolver = "2"
members = [
    "packages/envl-utils",
    "packages/envl-codeblock",
    "packages/envl-config",
    "packages/envl-vars",
    "packages/envl",
    "packages/envl-cli",
    "tests/envl-rs-test"
]

[workspace.package]
version = "0.10.0"
repository = "https://github.com/ROBOTofficial/envl"
license = "MIT"
edition = "2021"
rust-version = "1.74" # MSRV

[workspace.dependencies]
clap = { version = "4.5.50", features = ["derive"] }
thiserror = { version = "2.0.17" }
regex = { version = "1.11.3" }
proc-macro2 = { version = "1.0.101" }
quote = { version = "1.0.41" }
syn = { version = "2.0.108", features = ["full", "extra-traits"] }
envl = { version = "0.10.0", path = "./packages/envl" }
envl-vars = { version = "0.10.0", path = "./packages/envl-vars" }
envl-config = { version = "0.10.0", path = "./packages/envl-config" }
envl-codeblock = { version = "0.10.0", path = "./packages/envl-codeblock" }
envl-utils = { version = "0.10.0", path = "./packages/envl-utils" }

[patch.crates-io]
envl = { path = "packages/envl" }
envl-cli = { path = "packages/envl-cli" }
envl-vars = { path = "packages/envl-vars" }
envl-config = { path = "packages/envl-config" }
envl-codeblock = { path = "packages/envl-codeblock" }
envl-utils = { path = "packages/envl-utils" }

[workspace.lints.clippy]
